@@ -1,11 +1,8 @@
 package ru.sbt.mipt.oop.file.reader;
 
-import com.google.gson.Gson;
-import ru.sbt.mipt.oop.SmartHome;
-
 import java.io.IOException;
-import java.lang.reflect.Type;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class ReadFromJSON extends FileReader implements FileReaderInterface {
@@ -15,14 +12,9 @@ public class ReadFromJSON extends FileReader implements FileReaderInterface {
     }
 
     @Override
-    public String readAllBytes() throws IOException {
-        return new String(Files.readAllBytes(Paths.get(this.getFileName())));
-    }
-
-    @Override
-    public SmartHome getSmartHomeObj(Object o) throws IOException {
-        Gson gson = new Gson();
-        String json = this.readAllBytes();
-        return gson.fromJson(json, (Type) o);
+    public String readInputData() throws IOException {
+        Path path = Paths.get(this.getFileName());
+        byte[] allBytes = Files.readAllBytes(path);
+        return new String(allBytes);
     }
 }
